[gd_scene load_steps=43 format=4 uid="uid://c4yumr4l4f3ul"]

[ext_resource type="Script" uid="uid://cogcwjdik715v" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://crt8o8t66tvvy" path="res://assets/Map Tielset for ground.png" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://sgl2yf8sfi8o" path="res://assets/Map Tielset.png" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bl4kgjp3ecuu5" path="res://assets/sky/Clouds/Clouds 1/1.png" id="3_wu84c"]
[ext_resource type="Texture2D" uid="uid://b3sdpjodpjnr3" path="res://assets/sky/Clouds/Clouds 1/4.png" id="4_tbmy8"]
[ext_resource type="Texture2D" uid="uid://egj7tqg11p2w" path="res://assets/ningas/Kunoichi/Idle.png" id="5_8ln24"]
[ext_resource type="Texture2D" uid="uid://5aahkqb50gs6" path="res://assets/ningas/Ninja_Monk/Idle.png" id="6_oa1go"]
[ext_resource type="Texture2D" uid="uid://bd0fxwvupqown" path="res://assets/ningas/Ninja_Peasant/Idle.png" id="7_oa1go"]
[ext_resource type="AudioStream" uid="uid://defn7qbdyhpuj" path="res://assets/sounds/background-music-224633.mp3" id="9_jk1qb"]
[ext_resource type="AudioStream" uid="uid://4loepmfmxvh4" path="res://assets/sounds/button-press-382713.mp3" id="10_5dd4i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bqqt6"]
texture = ExtResource("2_ekxnf")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
1:2/0 = 0
2:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
13:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
1:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
5:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
1:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
14:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
14:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
14:12/0 = 0
17:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
11:13/0 = 0
12:13/0 = 0
14:13/0 = 0
17:13/0 = 0
18:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
14:14/0 = 0
16:14/0 = 0
17:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
14:15/0 = 0
17:15/0 = 0
18:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
16:16/0 = 0
17:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
11:17/0 = 0
12:17/0 = 0
14:17/0 = 0
15:17/0 = 0
17:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
11:18/0 = 0
12:18/0 = 0
14:18/0 = 0
15:18/0 = 0
17:18/0 = 0

[sub_resource type="TileSet" id="TileSet_wu84c"]
sources/0 = SubResource("TileSetAtlasSource_bqqt6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8ln24"]
texture = ExtResource("3_wu84c")
0:0/size_in_atlas = Vector2i(36, 20)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jk1qb"]
texture = ExtResource("4_tbmy8")
14:1/size_in_atlas = Vector2i(11, 8)
14:1/0 = 0

[sub_resource type="TileSet" id="TileSet_rtw2f"]
sources/1 = SubResource("TileSetAtlasSource_8ln24")
sources/3 = SubResource("TileSetAtlasSource_jk1qb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wu84c"]
texture = ExtResource("3_bqqt6")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
1:2/0 = 0
2:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
13:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
1:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
5:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
1:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
14:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
14:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
14:12/0 = 0
17:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
11:13/0 = 0
12:13/0 = 0
14:13/0 = 0
17:13/0 = 0
18:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
14:14/0 = 0
16:14/0 = 0
17:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
14:15/0 = 0
17:15/0 = 0
18:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
16:16/0 = 0
17:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
11:17/0 = 0
12:17/0 = 0
14:17/0 = 0
15:17/0 = 0
17:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
11:18/0 = 0
12:18/0 = 0
14:18/0 = 0
15:18/0 = 0
17:18/0 = 0
16:13/0 = 0
16:12/0 = 0
19:11/0 = 0

[sub_resource type="TileSet" id="TileSet_8ln24"]
sources/0 = SubResource("TileSetAtlasSource_wu84c")

[sub_resource type="AtlasTexture" id="AtlasTexture_rtw2f"]
atlas = ExtResource("5_8ln24")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa1go"]
atlas = ExtResource("5_8ln24")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmy8"]
atlas = ExtResource("5_8ln24")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1qb"]
atlas = ExtResource("5_8ln24")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dd4i"]
atlas = ExtResource("5_8ln24")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgwnu"]
atlas = ExtResource("5_8ln24")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_flqon"]
atlas = ExtResource("5_8ln24")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcqid"]
atlas = ExtResource("5_8ln24")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajci"]
atlas = ExtResource("5_8ln24")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_7b55j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtw2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa1go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dd4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgwnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flqon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcqid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajci")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_svtp6"]
atlas = ExtResource("7_oa1go")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dfpl"]
atlas = ExtResource("7_oa1go")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qywvv"]
atlas = ExtResource("7_oa1go")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wgol"]
atlas = ExtResource("7_oa1go")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1acrt"]
atlas = ExtResource("7_oa1go")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr8o3"]
atlas = ExtResource("7_oa1go")
region = Rect2(480, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_1acrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svtp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dfpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qywvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wgol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1acrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr8o3")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7b55j"]
atlas = ExtResource("6_oa1go")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pajh"]
atlas = ExtResource("6_oa1go")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ex8"]
atlas = ExtResource("6_oa1go")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8gd2"]
atlas = ExtResource("6_oa1go")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hstxw"]
atlas = ExtResource("6_oa1go")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8egab"]
atlas = ExtResource("6_oa1go")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw5y6"]
atlas = ExtResource("6_oa1go")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_svtp6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b55j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pajh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ex8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8gd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hstxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw5y6")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[node name="Main menu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="Label" type="Label" parent="."]
offset_left = 510.0
offset_top = 200.0
offset_right = 680.0
offset_bottom = 245.0
theme_override_font_sizes/font_size = 40
text = "SEKRO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start" type="Button" parent="."]
offset_left = 541.0
offset_top = 288.0
offset_right = 632.0
offset_bottom = 324.0
text = "start
"

[node name="quit" type="Button" parent="."]
offset_left = 559.0
offset_top = 335.0
offset_right = 618.0
offset_bottom = 366.0
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 324)
zoom = Vector2(2, 2)

[node name="map" type="Node" parent="."]

[node name="ground" type="TileMapLayer" parent="map"]
z_index = -2
tile_map_data = PackedByteArray("AAASABoAAAAIAAEAAAATABoAAAAIAAEAAAAUABoAAAAIAAEAAAAVABoAAAAIAAEAAAAWABoAAAAIAAEAAAAXABoAAAAIAAEAAAAYABoAAAAIAAEAAAAZABoAAAAIAAEAAAAaABoAAAAIAAEAAAAbABoAAAAIAAEAAAAcABoAAAAIAAEAAAAdABoAAAAIAAEAAAAeABoAAAAIAAEAAAAfABoAAAAIAAEAAAAgABoAAAAIAAEAAAAhABoAAAAIAAEAAAAiABoAAAAIAAEAAAAjABoAAAAIAAEAAAAnABoAAAAIAAEAAAAoABoAAAAIAAEAAAApABoAAAAIAAEAAAAqABoAAAAIAAEAAAArABoAAAAIAAEAAAAsABoAAAAIAAEAAAAtABoAAAAIAAEAAAAuABoAAAAIAAEAAAASABsAAAAIAAIAAAASABwAAAAIAAIAAAASAB0AAAAIAAIAAAASAB4AAAAIAAIAAAATABsAAAAPAAMAAAATAB0AAAAIAAIAAAATAB4AAAAIAAIAAAAUABsAAAAQAAMAAAAUAB0AAAAIAAIAAAAUAB4AAAAIAAIAAAAVABsAAAARAAMAAAAVAB0AAAAIAAIAAAAVAB4AAAAIAAIAAAAWABsAAAAIAAIAAAAWABwAAAAIAAIAAAAWAB0AAAAPAAMAAAAWAB4AAAAIAAIAAAAXABsAAAAIAAIAAAAXABwAAAAQAAMAAAAXAB0AAAAPAAMAAAAXAB4AAAAIAAIAAAAYABsAAAAIAAIAAAAYABwAAAAIAAIAAAAYAB0AAAAPAAMAAAAYAB4AAAAIAAIAAAAZABsAAAAIAAIAAAAZABwAAAAIAAIAAAAZAB0AAAAPAAMAAAAZAB4AAAAIAAIAAAAaABsAAAAIAAIAAAAaABwAAAAIAAIAAAAaAB0AAAAPAAMAAAAaAB4AAAAIAAIAAAAbABsAAAAIAAIAAAAbABwAAAAIAAIAAAAbAB0AAAAPAAMAAAAbAB4AAAAIAAIAAAAcABsAAAAIAAIAAAAcABwAAAAPAAMAAAAcAB0AAAAIAAIAAAAcAB4AAAAIAAIAAAAdABsAAAAIAAIAAAAdABwAAAAIAAIAAAAdAB0AAAAIAAIAAAAdAB4AAAAIAAIAAAAeABsAAAAPAAMAAAAeABwAAAAIAAIAAAAeAB0AAAAPAAMAAAAeAB4AAAAIAAIAAAAfABsAAAAPAAMAAAAfABwAAAAIAAIAAAAfAB0AAAAQAAMAAAAfAB4AAAAIAAIAAAAgABsAAAAPAAMAAAAgABwAAAAIAAIAAAAgAB0AAAARAAMAAAAgAB4AAAAIAAIAAAAhABsAAAAPAAMAAAAhABwAAAAPAAMAAAAhAB0AAAAIAAIAAAAhAB4AAAAIAAIAAAAiABsAAAAPAAMAAAAiABwAAAAPAAMAAAAiAB0AAAAIAAIAAAAiAB4AAAAIAAIAAAAjABsAAAAPAAMAAAAjABwAAAAPAAMAAAAjAB0AAAAIAAIAAAAjAB4AAAAIAAIAAAAkABsAAAASAAMAAAAkABwAAAAIAAIAAAAkAB0AAAAIAAIAAAAkAB4AAAAIAAIAAAAlABsAAAAIAAEAAAAlABwAAAAQAAMAAAAlAB0AAAAPAAMAAAAlAB4AAAAIAAIAAAAmABsAAAASAAMAABAmABwAAAAPAAMAAAAmAB0AAAAPAAMAAAAmAB4AAAAIAAIAAAAnABsAAAAPAAMAAAAnABwAAAAPAAMAAAAnAB0AAAAPAAMAAAAnAB4AAAAIAAIAAAAoABsAAAAPAAMAAAAoABwAAAAPAAMAAAAoAB0AAAAQAAMAAAAoAB4AAAAIAAIAAAApABsAAAAPAAMAAAApABwAAAAPAAMAAAApAB0AAAARAAMAAAApAB4AAAAIAAIAAAAqABsAAAAIAAIAAAAqABwAAAAPAAMAAAAqAB0AAAAIAAIAAAAqAB4AAAAIAAIAAAArABsAAAAPAAMAAAArABwAAAAIAAIAAAArAB0AAAAIAAIAAAArAB4AAAAIAAIAAAAsABsAAAAQAAMAAAAsABwAAAAIAAIAAAAsAB0AAAAPAAMAAAAsAB4AAAAIAAIAAAAtABsAAAARAAMAAAAtABwAAAAIAAIAAAAtAB0AAAAPAAMAAAAtAB4AAAAIAAIAAAAuABsAAAAIAAIAAAAuABwAAAAIAAIAAAAuAB0AAAAPAAMAAAAuAB4AAAAIAAIAAAAvABsAAAAIAAIAAAAvABwAAAAIAAIAAAAvAB0AAAAPAAMAAAAvAB4AAAAIAAIAAAAwABwAAAAIAAIAAAAwAB0AAAAPAAMAAAAwAB4AAAAIAAIAAAAxAB0AAAAIAAIAAAAxAB4AAAAIAAIAAAAyAB4AAAAIAAIAAAAzAB4AAAAIAAIAAAA0AB4AAAAIAAIAAAA1AB4AAAAIAAIAAAAVABwAAAAPAAMAAAAUABwAAAAPAAMAAAATABwAAAAPAAMAAAAkABoAAAACAAUAAAAmABoAAAACAAUAABA=")
tile_set = SubResource("TileSet_wu84c")

[node name="sky" type="TileMapLayer" parent="map"]
z_index = -3
tile_map_data = PackedByteArray("AAAiABEAAQAAAAAAAAA5ABEAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_rtw2f")

[node name="building" type="TileMapLayer" parent="map"]
z_index = -1
tile_map_data = PackedByteArray("AAAzABIAAAATAAsAAAApABIAAAAQAAkAAAApABMAAAAQAAoAAAApABQAAAAQAAsAAAApABUAAAAQAAwAAAApABYAAAAQABAAAAApABcAAAAQAA4AAAAqABIAAAARAAkAAAAqABMAAAARAAoAAAAqABQAAAARAAsAAAAqABUAAAARAAwAAAAqABYAAAARABAAAAAqABcAAAARAA4AAAAqABgAAAARABEAAAArABIAAAASAAkAAAArABMAAAASAAoAAAArABQAAAASAAsAAAArABYAAAAGAAoAAAArABgAAAAGAAoAAAAqABkAAAARABIAAAAdABgAAAARABEAAAAdABkAAAARABIAAAAcABQAAAAQAAkAAAAcABUAAAAQAAoAAAAcABYAAAAQAAsAAAAcABcAAAAQAAwAAAAdABQAAAARAAkAAAAdABUAAAARAAoAAAAdABYAAAARAAsAAAAdABcAAAARAAwAAAAeABQAAAASAAkAAAAeABUAAAASAAoAAAAeABYAAAASAAsAAAAYABkAAAAJABAAAAAWABkAAAAMABIAAAAVABkAAAALABIAAAAVABgAAAALABEAAAAWABgAAAAMABEAAAAXABgAAAALAA0AAAAYABcAAAAJAA4AAAAXABcAAAAMAA0AAAAWABcAAAALAA0AAAAXABYAAAAMAA0AAAAYABYAAAAJAA4AAAAVABcAAAALAA0AAAARABYAAAALAA0AAAASABYAAAALAA0AAAATABYAAAAIAA4AAAAUABYAAAALAA0AAAAUABcAAAALAA0AAAAUABgAAAALAA0AAAAUABkAAAAMAA0AAAATABkAAAAMAA0AAAASABkAAAAMAA0AAAASABgAAAAMAA0AAAASABcAAAALAA0AAAATABcAAAAHABAAAAATABgAAAALAA0AAAARABcAAAALAA0AAAARABgAAAALAA0AAAARABkAAAALAA0AAAAYABgAAAAJABAAAAATABQAAAAIAA0AAAATABUAAAAIAA4AAAAUABQAAAAIAA0AAAAUABUAAAAIAA4AAAAVABQAAAAGAAwAAAAVABUAAAAHAA4AAAAWABUAAAAHAA0AAAAXABUAAAAIAA0AAAAYABUAAAAJAA0AAAASABUAAAAIAA4AAAARABUAAAAIAA4AAAASABQAAAAIAA0AAAARABQAAAAIAA0AAAARABEAAAABAA8AAAARABIAAAABABAAAAASABAAAAACAA4AAAASABEAAAACAA8AAAASABIAAAACABAAAAATABAAAAADAA4AAAATABEAAAADAA8AAAATABIAAAAMAA8AAAATABMAAAAIAAwAAAAUABAAAAAEAA4AAAAUABEAAAAEAA8AAAAUABIAAAAHAAsAAAAUABMAAAAHABAAAAAVABMAAAAHAAsAAAAVABEAAAAHAAsAAAAVABIAAAAHAAsAAAAWABEAAAAIAAoAAAAWABIAAAAHABAAAAAWABMAAAAIAAoAAAAWABQAAAAIAAsAAAAVABAAAAAEAA4AAAAWABAAAAAEAA4AAAAXABAAAAABABAAAFAXABEAAAADAA8AABAYABEAAAACAA8AABAYABIAAAACABAAABAZABIAAAABABAAABAYABMAAAAIAAsAAAAYABQAAAAIAAsAAAAXABIAAAAHAAsAAAAXABMAAAAMAA8AAAAXABQAAAAHABAAAAAWABYAAAALAA0AAAAVABYAAAALAA0AAAAZABgAAAAEABEAAAAZABkAAAAEABEAAAAaABgAAAAEABEAAAAaABkAAAAEABEAAAAbABkAAAAEABEAAAAbABgAAAAEABEAAAAZABcAAAAEABEAAAAaABcAAAAEABEAAAAcABkAAAAEABEAAAAZABYAAAAEABEAAAASABMAAAAIAAwAAAAUAA8AAAAOAA8AAAAdABMAAAAOAA4AAAArABcAAAAGAAsAAAAzABoAAAAQAAcAAAAzABsAAAAQAAgAAAA0ABoAAAARAAcAAAA0ABsAAAAQAAgAAAA1ABoAAAASAAcAAAA1ABsAAAAQAAgAAAA1ABwAAAAQAAgAAAA0ABwAAAAQAAgAAAAzABwAAAAQAAgAAAAyABsAAAAQAAgAAAAyABwAAAAQAAgAAAAyABoAAAAQAAcAAAAzAB0AAAAQAAgAAAA0AB0AAAARAAgAAAA1AB0AAAASAAgAAAAyAB0AAAAQAAgAAAAxABwAAAAQAAgAAAAwABsAAAAQAAgAAAAxABsAAAAQAAgAAAAwABoAAAAQAAcAAAAvABoAAAARAAcAAAAlABoAAAAHAAQAAAAbABYAAAALAAoAAAAbABcAAAALAAsAAAAXABkAAAALAA0AAAAsABcAAAAMAA8AAAAsABgAAAAMAAoAAAAtABcAAAAHAAoAAAAtABgAAAAMAAoAABAsABkAAAAMAAsAAAAtABkAAAAMAAsAABAuABgAAAAIAAsAAAAsABYAAAAHAAoAAAAtABYAAAAIAAoAAAArABkAAAAGAAsAAAArABUAAAAGAAgAAAAsABUAAAAHAAgAAAAtABUAAAAHAAgAAAAuABcAAAAIAAoAAAAuABkAAAAMAA8AAAAuABYAAAAMAA8AAAAuABUAAAAIAAgAAAAxABoAAAARAAcAAAAhABkAAAAOAA0AAAAiABkAAAARABIAAAAhABAAAAAQAAkAAAAhABQAAAAQAA0AAAAiABIAAAARAAsAAAAhABEAAAAQAAoAAAAhABIAAAAQAAsAAAAhABMAAAAQAAwAAAAhABUAAAAQAA4AAAAhABcAAAAQABAAAAAiABAAAAARAAkAAAAiABEAAAARAAoAAAAiABMAAAARAAwAAAAiABQAAAARAA0AAAAiABUAAAARAA4AAAAiABYAAAARAA8AAAAiABcAAAARABAAAAAiABgAAAARABEAAAAjABAAAAASAAkAAAAjABEAAAASAAoAAAAjABIAAAASAAsAAAAjABQAAAASAA0AAAAjABYAAAASAA8AAAA=")
tile_set = SubResource("TileSet_8ln24")

[node name="sprites" type="Node" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="sprites"]
z_index = 10
position = Vector2(656, 369)
scale = Vector2(0.757813, 0.757813)
sprite_frames = SubResource("SpriteFrames_7b55j")
autoplay = "default"
frame_progress = 0.119591

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(352, 220)
scale = Vector2(0.758, 0.758)
sprite_frames = SubResource("SpriteFrames_1acrt")
autoplay = "default"
frame_progress = 0.485

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(496, 381)
scale = Vector2(0.758, 0.758)
sprite_frames = SubResource("SpriteFrames_svtp6")
autoplay = "default"
frame_progress = 0.972305

[node name="sound" type="Node" parent="."]

[node name="backgound music" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("9_jk1qb")

[node name="button" type="AudioStreamPlayer2D" parent="sound"]
stream = ExtResource("10_5dd4i")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="ready" from="sound/backgound music" to="." method="_on_audio_stream_ready"]
